//指定版本
//注意proto3与proto2的写法有些不同
syntax = "proto3";

//包名，通过protoc生成时go文件时
package protomsg;





message MsgBase {
    string  ModeType = 1;
    int32   Uid = 2;
    string  MsgType = 3;
    int32   ConnectId = 4;
    bytes Datas = 5;
}
message MsgRegisterToGate {
    string ModeType = 1;
}

message CS_MsgQuickLogin {
    string Platform = 1;
    string Machineid = 2;
    string Name = 3;
}


message CS_Login {
    string Phonenumber = 1;
    string Platform = 2;
    string Machineid = 3;
    string Wechat_id = 4;
    string QQ_id = 5;
}
//登录成功后的 选择角色
message CS_SelectCharacter {
    CharacterBaseDatas SelectCharacter = 1;//选择角色
}

//loading界面加载完成
message CS_LodingScene{
    int32  SceneID = 1;//场景ID
}
//观看视频
message CS_LookVedioSucc{
    int32  ID = 1;//ID  1表示看视频得砖石
}

//使用AI
message CS_UseAI{
    int32  AIid = 1;//AIid
}

//进入游戏失败 需要排队
message SC_NeedLineUp{
    int32 FrontCount = 1;//前面的人数
}
//获取排队前面的人数
message CS_GetLineUpFrontCount{
    int32  Nothing1 = 1;//
}
//返回获取排队前面的人数
message SC_GetLineUpFrontCount{
    int32 FrontCount = 1;//前面的人数
}

//取消排队
message CS_CancelLineUp{
    int32  Nothing = 1;//
}

//装备栏
message UnitEquip{
    int32 Pos = 1;//位置
    int32 TypdID = 2;//类型id
    int32 Level = 3;//等级
    int32 PriceType = 4; //回收价格类型 1金币 2砖石
    int32 Price = 5;    //回收价格

}

//单位面板详细信息
message UnitBoardDatas{
    int32   ID = 1;
    string  Name = 2;
    float   AttributeStrength = 3;//力量
    float   AttributeAgility = 4;//敏捷
    float   AttributeIntelligence = 5;//智力
    int32   Attack = 6;//攻击力 (基础攻击力+属性影响+buff影响)
    float   AttackSpeed = 7;//攻击速度
    float   AttackRange = 8;//攻击范围 攻击距离
    float   MoveSpeed = 9;//移动速度
    float   MagicScale = 10;//技能增强
    float   MPRegain = 11;//魔法恢复
    float   PhysicalAmaor = 12;//物理护甲
    float   PhysicalResist = 13;//物理伤害抵挡
    float   MagicAmaor = 14;//魔法抗性
    float   StatusAmaor = 15;//状态抗性
    float   Dodge = 16;//闪避(0)
    float   HPRegain = 17;//生命恢复
    float   RawAttributeStrength = 18;//力量
    float   RawAttributeAgility = 19;//敏捷
    float   RawAttributeIntelligence = 20;//智力
    int32   RawAttack = 21;//攻击力 (基础攻击力+属性影响+buff影响)
    float   RawAttackSpeed = 22;//攻击速度
    float   RawAttackRange = 23;//攻击范围 攻击距离
    float   RawMoveSpeed = 24;//移动速度
    float   RawMagicScale = 25;//技能增强
    float   RawMPRegain = 26;//魔法恢复
    float   RawPhysicalAmaor = 27;//物理护甲
    float   RawPhysicalResist = 28;//物理伤害抵挡
    float   RawMagicAmaor = 29;//魔法抗性
    float   RawStatusAmaor = 30;//状态抗性
    float   RawDodge = 31;//闪避(0)
    float   RawHPRegain = 32;//生命恢复
    int32   AttributePrimary = 33;//主属性(1:力量 2:敏捷 3:智力)
    string  DropItems = 34;//掉落道具
    int32   RemainExperience = 35;//今天剩余可以获取到的经验值
    repeated UnitEquip Equips = 36;//装备
}
//技能数据
message SimpleSkillDatas{
    int32   TypeID = 1;
    int32   Level = 2;//技能等级
    int32   Index = 5;//位置索引
}


//获取单位面板详细信息 
message CS_GetUnitInfo {
    int32 UnitID = 1;//单位对象id
}
//获取角色简要信息(装备和技能)
message CS_GetCharacterSimpleInfo{
    int32 CharacterID = 1;//单位对象id
}
//返回获取角色简要信息(装备和技能)
message SC_GetCharacterSimpleInfo{
    int32 CharacterID = 1;//单位对象id
    string  Name = 2;
    int32   Level = 3;
    string  ModeType = 4;//模型类型(客户端使用的模型名字)
    repeated string  EquipItems = 5;//装备1
    string  Skills = 6;//技能
    string LastLoginDate = 7;//最近登录日期
}
//获取道具额外信息
message CS_GetItemExtraInfo {
    int32 TypeId = 1;//道具ID
}
message SC_GetItemExtraInfo {
    int32 TypeId = 1;//道具ID
    int32 Exception = 2;//
    string ExceptionParam = 3;//
    int32 EquipNeedLevel = 4;//
}

//获取自己背包详细信息 
message CS_GetBagInfo {
    int32 UnitID = 1;//单位对象id
}
//交换道具位置 背包位置
message CS_ChangeItemPos {
    int32 SrcPos = 1;//源位置
    int32 DestPos = 2;//目标位置
    int32 SrcType = 3;//源类型 1表示装备栏 2表示背包
    int32 DestType = 4;//目标类型 1表示装备栏 2表示背包
}

//删除道具
message CS_DestroyItem{
    int32 SrcPos = 1;//源位置
}

//系统回收道具
message CS_SystemHuiShouItem{
    int32 SrcPos = 1;//源位置
}

message SC_UnitInfo  {
    UnitBoardDatas   UnitData = 1;//单位面板信息
}
message SC_BagInfo  {
    repeated UnitEquip Equips = 1;//装备
}

//玩家升级技能
message CS_PlayerUpgradeSkill{
    int32 TypeID = 1;//技能id
}

//玩家移动操作
message CS_PlayerMove {
    repeated int32 IDs = 1;//操作的单位对象
    float X = 2;//移动的x方向 技能的目标点x或目标方向
    float Y = 3;//移动的Y方向 技能的目标点Y或目标方向
    bool IsStart = 4;//true 表示开始移动  false表示结束移动
}
//玩家攻击操作
message CS_PlayerAttack {
    repeated int32 IDs = 1;//操作的单位对象
    int32 TargetUnitID = 2;//攻击对象id 或者技能对象ID
}

//玩家技能操作(包括道具)
message CS_PlayerSkill {
    int32 ID = 1;//操作的单位对象
    int32 SkillID = 2;//技能id
    float X = 3;//移动的x方向 技能的目标点x或目标方向
    float Y = 4;//移动的Y方向 技能的目标点Y或目标方向
    int32 TargetUnitID = 5;//攻击对象id 或者技能对象ID
}
//玩家切换攻击模式
message CS_ChangeAttackMode {
    int32 AttackMode = 1;//切换后的攻击模式
}


//组队操作
message CS_OrganizeTeam {
    int32 Player1 = 1;//玩家1的id
    int32 Player2 = 2;//玩家2的id
}
//组队请求
message SC_RequestTeam{
    int32 SrcPlayerUID = 1;//来源uid
    string SrcName = 2;//名字
    int32 SrcUnitTypeID = 3;//单位类型
    int32 SrcLevel = 4;//单位等级
    int32 RequestType = 5;// 组队类型 1:请求加入战队 2:邀请目标加入战队

}
//回复组队请求
message CS_ResponseOrgTeam {
    int32 SrcPlayerUID = 1;//来源uid
    int32 IsAgree = 2;//是否同意  1同意 2不同意
    int32 RequestType = 3;// 组队类型 1:请求加入战队 2:邀请目标加入战队
}
//队伍踢人
message CS_OutTeam{
    int32 OutPlayerUID = 1;//被踢者的UID
}

//队伍玩家信息
message TeamPlayerInfo{
    int32 UID = 1;
    string Name = 2;//名字
    int32 HP = 3;//血量
    int32 MP = 4;//魔法
    int32 MaxHP = 5;//最大血量
    int32 MaxMP = 6;//最大魔法
    int32 ID = 7;//单位ID
}
//更新队伍信息
message SC_UpdateTeamInfo {
    int32 TeamID = 1;//队伍ID
    int32 MainUID = 2;//队长的UID
    repeated TeamPlayerInfo TPInfo = 3;//成员信息(包括队长在内)
}

//提示文字
message SC_NoticeWords{
    int32 TypeID = 1;//id
    repeated string P = 2;//参数
    
}


//技能数据
message SkillDatas{
    int32   TypeID = 1;
    int32   Level = 2;//技能等级
    float RemainCDTime = 3;//技能CD剩余时间
    int32   CanUpgrade = 4;//是否可以升级 1 表示可以  2 表示不可以
    int32   Index = 5;//位置索引
    int32   CastType = 6;//施法类型:  1:主动技能  2:被动技能
    int32   CastTargetType = 7;//施法目标类型 1:自身为目标 2:以单位为目标 3:以地面1点为目标
    int32   UnitTargetTeam = 8;//目标单位关系 1:友方  2:敌方 3:友方敌方都行
    int32   UnitTargetCamp = 9;//目标单位阵营 (1:玩家 2:NPC) 3:玩家NPC都行
    int32   NoCareMagicImmune = 10;//无视技能免疫 (1:无视技能免疫 2:非)
    float CastRange = 11;//施法距离
    float Cooldown = 12;//技能冷却时间
    float HurtRange = 13;//伤害范围 小于等于0表示单体
    int32   ManaCost = 14;//技能魔法消耗
    int32 AttackAutoActive = 15;////攻击时自动释放 是否激活 1:激活 2:否
    int32 Visible = 16;////技能是否显示 1:是 2:否
    int32 RemainSkillCount = 17;//技能剩余点数
    int32 MaxLevel = 18;//技能最大等级
    int32 RequiredLevel = 19;//需要多少级可以学习该技能
    int32 LevelsBetweenUpgrades = 20;//学习该技能的等级步长
    int32 InitLevel = 21;//技能初始等级
}
//buff数据
message BuffDatas{
    int32    TypeID = 1; //buffid 对应人物身上的特效 buff图标
    float    RemainTime = 2;//剩余时间
    float    Time = 3;//总时间
    int32    TagNum = 4;//标记数字
    int32    ConnectionType = 5; //是否有连接 0表示没有 1表示有连接点 2表示有连接单位
    float    ConnectionX = 6;//连接点x
    float    ConnectionY = 7;//连接点y
    float    ConnectionZ = 8;//连接点z

}

//单位数据
message UnitDatas{
    string  Name = 1;
    int32   Level = 2;
    int32   HP = 3;
    int32   MP = 4;
    float   X = 5;
    float   Y = 6;
    int32   ID = 7;
    string  ModeType = 8;//模型类型(客户端使用的模型名字)
    int32   MaxHP = 9;
    int32   MaxMP = 10;
    int32   Experience = 11;
    int32   MaxExperience = 12;
    int32   ControlID = 13;//控制者id uid
    int32   AnimotorState = 14;//动画状态 1:idle 2:walk 3:attack 4:skill 5:death
    float   AttackTime = 15;//攻击动画时间
    float   DirectionX = 16;//方向x
    float   DirectionY = 17;//方向y
    int32   UnitType = 18;//单位类型(1:英雄 2:普通单位 3:远古 4:boss)
    int32   AttackAcpabilities = 19;//(1:近程攻击 2:远程攻击)
    int32   AttackMode = 20;//攻击模式(1:和平模式 2:组队模式 3:全体模式 4:阵营模式(玩家,NPC) 5:行会模式)
    int32   IsMain = 21;//是否是主单位
    int32   IsDeath = 22;//是否死亡((1:死亡 2:没死)) 死亡后不显示血条
    int32   Invisible = 23;//是否隐身 1:是 2:否
    int32   Camp = 24;//阵营 (1:玩家 2:NPC)
    bool    IsMiss = 25; //显示相关的 本次是否有miss效果
    int32   AnimotorPause = 26; //动画暂停 1表示是 2表示否
    int32   SkillEnable = 27;//能否使用主动技能 (比如 被眩晕和沉默不能使用主动技能) 1:可以 2:不可以
    int32   ItemEnable = 28;//能否使用主动道具 (比如 被眩晕和禁用道具不能使用主动道具) 1:可以 2:不可以
    float   Z = 29;//z坐标
    int32   IsMirrorImage = 30; //是否是镜像
    float   AttackRange = 31;//攻击距离
    int32   AttackAnim = 32;//攻击动画
    int32   TypeID = 33; //类型id
    float   RemainReviveTime = 34;//剩余复活时间
    int32   TeamID = 35;//组队的队伍ID
    int32   Gold = 36;//金币
    int32   Diamond = 37;//钻石
    int32   ReviveGold = 38;//复活需要的金币
    int32   ReviveDiamond = 39;//复活需要的砖石
    int32   Characterid = 40;//
    int32   RemainWatchVedioCountToday = 41;//今日剩余观看视频次数
    int32   WatchVedioAddDiamond = 42;//当前观看视频奖励砖石
    int32   GuildID = 43;//公会ID
    string  GuildName = 44; //公会名字
    int32   GroupID = 45;//小组ID
    int32   RemainExperience = 46;//今天剩余可以获取到的经验值
    int32   BattleRank = 47;//竞技场排名
    repeated SkillDatas SD = 48;//技能数据
    repeated BuffDatas BD = 49;//buff数据
    repeated SkillDatas ISD = 50;//道具技能数据

    //单位状态(idle walk attack skill die)
    //各种buff状态(单位身上的buff 包括剩余时间)
    //单位的装备
    //单位的技能

}
message BulletDatas{
    int32 ID = 1;//子弹唯一ID
    string ModeType = 2;//弹道特效模型 (客户端使用的模型名字)
    float X = 3;
    float Y = 4;
    float Z = 5;
    int32 State = 6;//状态 子弹状态(1:创建 需要创建特效,2:移动,3:到达后计算结果(伤害和回血) 4:完成 可以删除了)
    float StartX = 7;
    float StartY = 8;
    float StartZ = 9;
    float EndX = 10;
    float EndY = 11;
    float EndZ = 12;

}

message SceneItemDatas{
    int32 ID = 1;//子弹唯一ID
    int32 TypeID = 2;// (客户端使用的模型名字)
    float X = 3;
    float Y = 4;

}

message HaloDatas{
    int32 ID = 1;//光环唯一ID
    string ModeType = 2;//光环特效
    float X = 3;
    float Y = 4;
    float Z = 5;
}


message MsgUserEnterScene {
    int32 Uid = 1;
    int32 ConnectId = 2;
    string SrcServerName = 3;
    string DestServerName = 4;
    int32 SceneID = 5;
    bytes Datas = 6;    //玩家信息数据
}

//玩家自己造成的伤害数据
message MsgPlayerHurt{
    int32 HurtUnitID = 1;   //伤害单位ID
    int32 HurtAllValue = 2; //总伤害值
    int32 HurtMagicValue = 3;//魔法伤害值
    int32 IsCrit = 4;   //是否暴击
    int32 GetGold = 5;//获取到的金币数量
    int32 GetDiamond = 6;//获取的砖石
}

//每帧更新单位数据
message SC_Update  {
    int32   CurFrame = 1;//当前帧
    repeated UnitDatas NewUnits = 2;//新的单位数据
    repeated UnitDatas OldUnits = 3;//旧单位(只更新变化的值)
    repeated int32 RemoveUnits = 4;//删除单位(单位ID)

    repeated BulletDatas NewBullets = 5;//新的子弹
    repeated BulletDatas OldBullets = 6;//旧子弹(只更新变化值)
    repeated int32 RemoveBullets = 7;//删除子弹(子弹ID)

    repeated HaloDatas NewHalos = 8;//新的光环
    repeated HaloDatas OldHalos = 9;//旧光环(只更新变化值)
    repeated int32 RemoveHalos = 10;//删除光环(子弹ID)

    repeated SceneItemDatas NewSceneItems = 11;//新的道具
    repeated int32 RemoveSceneItems = 12;//删除道具(道具ID)


    repeated MsgPlayerHurt PlayerHurt = 13;//玩家造成的伤害
}

//玩家进入新场景时的场景信息
message SC_NewScene{
    string Name = 1;//场景名称
    int32  LogicFps = 2;//逻辑帧率 (20即每秒20帧)
    int32  CurFrame = 3;//当前帧 (客户端通过当前帧和本地时间匹配计算延时逻辑)
    string ServerName = 4;//服务器名字
    int32  SceneID = 5;//场景ID
    int32  TimeHour = 6;//
    int32  TimeMinute = 7;//
    int32  TimeSecond = 8;//
    int32  DataShowType = 9;////数据显示类型 0不显示 1公会战数据 2竞技场数据
}


//单位数据
message CharacterBaseDatas{
    int32   Characterid = 1;
    string  Name = 2;
    int32   Typeid = 3;
    int32   Level = 4;
}

message SC_Logined {
    int32 Code = 1;//登录结果 1表示成功 0表示失败
    int32 Uid = 2;//UID
    string Error = 3;//失败原因
    repeated CharacterBaseDatas Characters = 4;//已经拥有的角色
}
//选择角色结果()
message SC_SelectCharacterResult {
    int32 Code = 1;//选择角色结果 1表示成功 0表示失败
    int32 Characterid = 2;//Characterid
    int32 Error = 3;//失败原因  名字重复
}

//商品数据
message CommodityDataProto{
    int32 TypeID = 1;    //商品ID
    int32 ItemID = 2;    //道具ID
    int32 PriceType = 3; //价格类型 1金币 2砖石
    int32 Price = 4;    //价格
    int32 Level = 5; //道具等级
}
//获取商店数据
message CS_GetStoreData{
    int32 Test = 1;//
}
//返回商品数据
message SC_StoreData{
    repeated CommodityDataProto Commoditys = 1;//所有商品
}
//购买商品
message CS_BuyCommodity{
    int32 TypeID = 1;    //商品ID 
}

//立即复活
message CS_QuickRevive{
    int32 ReviveType = 1;    //1金币复活 2砖石复活 3看视频复活
    int32 LookVideoState = 2;//看视频状态 1开始看 2结束看成功 3结束看失败
}

//掉线 客户端自己发给自己的消息
message CC_Disconnect{
    string Err = 1; //掉线原因
}

//聊天信息
message SC_ChatInfo{
    int32 Channel = 1;//聊天频道 1附近 2全服 3私聊 4队伍
    string Time = 2;//时间
    string SrcName = 3;//发送者名字
    int32 SrcPlayerUID = 4;//发送者uid
    int32 SrcCharacterID = 5;//发送者角色ID
    int32 DestPlayerUID = 6;//目标者uid
    string Content = 7;//内容
}
//发送聊天信息
message CS_ChatInfo{
    int32 Channel = 1;//聊天频道 1附近 2全服 3私聊 4队伍
    int32 DestPlayerUID = 5;//目标者uid
    string Content = 6;//内容
}

//添加好友
message CS_AddFriendRequest{
    int32 Uid = 1;//uid
    int32 Characterid = 2;//角色ID
}
//删除好友
message CS_RemoveFriend{
    int32 Uid = 1;//uid
    int32 Characterid = 2;//角色ID
}
//回复好友请求
message CS_AddFriendResponse{
    FriendInfoMsg FriendInfo = 1;//
    int32 Result = 2;//1同意  2拒绝
}
//好友信息
message FriendInfoMsg{
    int32 Uid = 1;//uid
    int32 Characterid = 2;//角色ID
    string Name = 3;
    int32 Level = 4;//
    int32 Typeid = 5;//
    int32 State = 6;//
}
//获取好友列表
message CS_GetFriendsList{
    int32 Uid = 1;
}
//获取好友列表
message SC_GetFriendsList{
    repeated FriendInfoMsg Friends = 1;//好友
    repeated FriendInfoMsg FriendsRequest = 2;//好友请求
}

//邮件系统相关
//邮件简短信息
message MailShortInfoMsg{
    int32 Id = 1;//id
    string SendName = 2;//来自
    string Title = 3;//标题
    string Date = 4;//日期
    int32 State = 5;//领取状态 0表示未领取，1表示已领取
}
//邮件奖励 ItemType:10000表示金币 10001表示砖石  其他表示道具ID
message MailRewards{
    int32 ItemType = 1;//道具类型ID
    int32 Count = 2;//数量
    int32 Level = 3;//道具等级
}

//获取邮件列表
message CS_GetMailsList{
    int32 Uid = 1;
}
//获取邮件列表
message SC_GetMailsList{
    repeated MailShortInfoMsg Mails = 1;//邮件
    int32 MailUpperLimit = 2;//邮件数量上限
    
}
//获取具体邮件信息
message CS_GetMailInfo{
    int32 Id = 1;//邮件ID
}
//获取邮件列表
message SC_GetMailInfo{
    int32 Id = 1;//id
    string SendName = 2;//来自
    string Title = 3;//标题
    string Content = 4;//内容
    string Date = 5;//日期
    repeated MailRewards Rewards = 6;//邮件奖励
    int32 State = 7;//领取状态 0表示未领取，1表示已领取
}
//领取邮件奖励
message CS_GetMailRewards{
    int32 Id = 1;//邮件ID
}
//领取邮件奖励
message SC_GetMailRewards{
    int32 Id = 1;//邮件ID
    int32 Result = 2;//1表示成功 0表示失败
}
//删除已经领取附件的邮件(没有附件)
message CS_DeleteNoRewardMails{
    int32 Id = 1;//ID
}


//交易所相关
//获取正在售卖的道具
message CS_GetExchangeShortCommoditys{
    int32 Id = 1;//
}
//正在售卖的道具数据
message ExchangeShortCommodityData{
    int32 ItemID = 1; //道具ID
    int32 SellCount = 2;//售卖数量
}
//返回正在售卖的相同种类道具数据
message SC_GetExchangeShortCommoditys{
    repeated ExchangeShortCommodityData Commoditys = 1;//所有商品
}
//返回正在售卖的道具
message CS_GetExchangeDetailedCommoditys{
    int32 ItemID = 1;////道具ID
}

//商品数据
//message CommodityDataProto{
//    int32 TypeID = 1;    //商品ID
//    int32 ItemID = 2;    //道具ID
//    int32 PriceType = 3; //价格类型 1金币 2砖石
//    int32 Price = 4;    //价格
//    int32 Level = 5; //道具等级
//}
//正在售卖的道具数据
message ExchangeDetailedCommodityData{
    CommodityDataProto CommodityData = 1;//道具信息
    int32 RemaindTime = 2;//剩余时间
}
//返回正在售卖的道具数据
message SC_GetExchangeDetailedCommoditys{
    repeated ExchangeDetailedCommodityData Commoditys = 1;//所有商品
}

//购买商品
message CS_BuyExchangeCommodity{
    int32 ID = 1;    //商品ID 
}
//上架商品(只能上架背包里面的道具)
message CS_ShelfExchangeCommodity{
    int32 BagPos = 1;    //背包里的位置
    int32 PriceType = 2; //价格类型 10000金币 10001砖石
    int32 Price = 3;    //价格
}
//下架商品()
message CS_UnShelfExchangeCommodity{
    int32 ID = 1;    //商品ID
}

//获取我要出售界面信息
message CS_GetSellUIInfo{
    int32 ID = 1;////
}
//获取我要出售界面信息
message SC_GetSellUIInfo{
    int32 ShelfExchangeLimit = 1;
    float SellExchangeTax = 2;
    int32 ShelfExchangeFeePriceType = 3;
    int32 ShelfExchangeFeePrice = 4;
    int32 AutoUnShelfTime = 5;
    repeated ExchangeDetailedCommodityData Commoditys = 6;//我正在卖的商品
    repeated UnitEquip Equips = 7;//装备 背包里可以卖的装备
}

//获取世界拍卖行信息
message CS_GetWorldAuctionItems{
    int32 ID = 1;////
}
message SC_GetWorldAuctionItems{
    repeated AuctionItem Items = 1;//
}
//出价公会拍卖物品
message CS_NewPriceWorldAuctionItem{
    int32 ID = 1;                       //商品ID
    int32 Price = 2;                    //价格
}

//-------------公会相关------------
//查看所有公会简短信息
message CS_GetAllGuildsInfo{
    int32 ID = 1;////
}
//公会简短信息
message GuildShortInfo{
    int32 ID = 1;//id
    string Name = 2;//名字
    int32 Level = 3;//等级
    int32 Experience = 4;//经验值
    int32 MaxExperience = 5;//最大经验值
    int32 CharacterCount = 6;//当前成员数量
    int32 MaxCount = 7;//最大成员数量
    string PresidentName = 8;//会长名字
    int32 Joinaudit = 9; //加入是否需要审批
    int32 Joinlevellimit = 10;//加入等级限制
    string Notice = 11;//公告
    int32 Rank = 12;//排名
}
//返回所有公会信息
message SC_GetAllGuildsInfo{
    repeated GuildShortInfo Guilds = 1;//所有公会信息
    int32 CreatePriceType = 2; //创建公会 价格类型 10000金币 10001砖石
    int32 CreatePrice = 3;    //创建公会 价格 
}
//创建公会
message CS_CreateGuild{
    string Name = 1;//名字
}
//申请加入公会
message CS_JoinGuild{
    int32 ID = 1;//公会ID
}
//查看公会详情
message CS_GetGuildInfo{
    int32 ID = 1;//公会ID
}
message SC_GetGuildInfo{
    GuildShortInfo GuildBaseInfo = 1;//公会基本信息
    repeated GuildChaInfo Characters = 2;//公会所有成员信息
}
//公会成员信息
message GuildChaInfo{
    int32 Uid = 1;
    int32 Characterid = 2;
    string Name = 3;
    int32 Level = 4;
    int32 Typeid = 5;
    int32 PinLevel = 6;
    int32 PinExperience = 7;
    int32 Post = 8;
    string PinLevelName = 9;
    string PostName = 10;
    int32 PinMaxExperience = 11;
}

//获取公会申请列表
message CS_GetJoinGuildPlayer{
    int32 ID = 1;//公会ID
}
message SC_GetJoinGuildPlayer{
    repeated GuildChaInfo RequestCharacters = 1;//公会申请成员信息
}
//回复玩家加入公会
message CS_ResponseJoinGuildPlayer{
    int32 Characterid = 1;
    int32 Result = 2; //1表示同意 其他表示不同意
}
//把玩家踢出公会
message CS_DeleteGuildPlayer{
    int32 Characterid = 1;
}
//公会操作
message CS_GuildOperate{
    int32 Code = 1; //1表示自己退出公会 2表示解散公会
}
//设置公会成员职位
message CS_ChangePost{
    int32 Characterid = 1; //角色ID
    int32 Post = 2;//职位
}

//修改公告
message CS_EditorGuildNotice{
    string Notice = 1;//公告内容
}

//获取公会拍卖物品
message CS_GetAuctionItems{
    int32 ID = 1;
}

message SC_GetAuctionItems{
    repeated AuctionItem Items = 1;//
}

//公会拍卖物品数据
message AuctionItem{
    int32 ID = 1;                       //商品ID
    int32 ItemID = 2;                   //道具ID
    int32 PriceType = 3;                //价格类型 1金币 2砖石
    int32 Price = 4;                    //价格
    int32 Level = 5;                    //道具等级
    string BidderCharacterName = 6;     //竞拍者名字
    repeated string ReceivecharactersName = 7;   //分红的所有人名字
    int32 RemainTime = 8;//剩余时间
    int32 BidderType = 9;////出价者类型 1表示所有人 2表示参与分红的人
}

//出价公会拍卖物品
message CS_NewPriceAuctionItem{
    int32 ID = 1;                       //商品ID
    int32 Price = 2;                    //价格
}

//获取公会排名界面信息
message CS_GetGuildRankInfo{
    int32 ID = 1;
}
//返回公会排名界面信息
message SC_GetGuildRankInfo{
    repeated GuildShortInfo Guilds = 1;//所有公会信息
    GuildMapInfo MapInfo = 2;//
}
//获取公会排名战击杀信息
message CS_GetGuildRankBattleInfo{
    int32 ID = 1;
}
//公会排名战击杀信息
message GuildRankBattleChaInfo{
    int32 Characterid = 1;
    string Name = 2;
    int32 Level = 3;
    int32 KillCount = 4;
    int32 DeathCount = 5;
    int32 GuildId = 6;
    string GuildName = 7;
    int32 Typeid = 8;
}
//返回公会排名战击杀信息
message SC_GetGuildRankBattleInfo{
    repeated GuildRankBattleChaInfo AllCha = 1;//英雄信息
}

//获取公会地图信息
message CS_GetGuildMapsInfo{
    int32 ID = 1;
}
//返回公会地图信息
message SC_GetGuildMapsInfo{
    repeated GuildMapInfo Maps = 1;//
}
//公会地图信息
message GuildMapInfo{
    int32 ID = 1;              //ID
    int32 OpenMonthDay = 2;    //在月份的几号开启    -1表示所有 10表示10号
    string OpenWeekDay = 3;    //在一周中的星期几开启 -1表示所有 5表示星期五
    string OpenStartTime = 4;  //开始时间 字符串
    string OpenEndTime = 5;    //结束时间 字符串
    int32 NeedGuildLevel = 6;  //需要的公会等级
    int32 NextSceneID = 7;     //场景ID
}
//进入公会地图
message CS_GotoGuildMap{
    int32 ID = 1; //公会地图ID
}
message SC_GotoGuildMap{
    int32 Result = 1;//1表示成功 其他表示失败
}

//获取活动地图
message CS_GetActivityMapsInfo{
    int32 ID = 1;
}
//返回活动地图信息
message SC_GetActivityMapsInfo{
    repeated ActivityMapInfo Maps = 1;//
}
//活动地图信息
message ActivityMapInfo{
    int32 ID = 1;              //ID
    int32 OpenMonthDay = 2;    //在月份的几号开启    -1表示所有 10表示10号
    string OpenWeekDay = 3;    //在一周中的星期几开启 -1表示所有 5表示星期五
    string OpenStartTime = 4;  //开始时间 字符串
    string OpenEndTime = 5;    //结束时间 字符串
    int32 NeedLevel = 6;  //需要的玩家等级
    int32 NextSceneID = 7;     //场景ID
    int32 PriceType = 8; //价格类型
    int32 Price = 9;// 价格
}
//获取地图信息包括boss刷新时间和掉落道具
message CS_GetMapInfo{
    int32 SceneID = 1;
}
//返回地图信息
message SC_GetMapInfo{
    int32 SceneID = 1;
    int32 BossFreshTime = 2;//boss刷新时间
    repeated int32 DropItems = 3;//掉落道具类型ID
}
//进入活动地图
message CS_GotoActivityMap{
    int32 ID = 1; //活动地图ID
}
message SC_GotoActivityMap{
    int32 Result = 1;//1表示成功 其他表示失败
}

//获取夺宝奇兵活动信息
message CS_GetDuoBaoInfo{
    int32 ID = 1;
}
//获取夺宝奇兵活动信息
message SC_GetDuoBaoInfo{
    ActivityMapInfo MapGoInInfo = 1;//
    SC_GetMapInfo MapInfo = 2;//
    int32 Minute = 3;//间隔分钟
}

//获取所有副本地图信息
message CS_GetCopyMapsInfo{
    int32 ID = 1;
}
//返回副本地图信息
message SC_GetCopyMapsInfo{
    repeated CopyMapInfo Maps = 1;//
    int32 RemainPlayTimes = 2;//剩余进入副本次数
}
//副本地图信息
message CopyMapInfo{
    int32 ID = 1;              //ID   
    int32 NeedLevel = 2;  //需要的玩家等级
    int32 NextSceneID = 3;     //场景ID
    int32 PlayerCount = 4; //玩家数量
    int32 State = 5;//状态 1可以匹配 2匹配中
}
//匹配副本
message CS_CopyMapPiPei{
    int32 CopyMapID = 1;
}
//取消匹配
message CS_CopyMapCancel{
    int32 CopyMapID = 1;
}
//匹配信息(gameui上的显示)
message SC_ShowPiPeiInfo{
    int32 PiPeiState = 1;//状态 1可以匹配 2匹配中(显示正在匹配中的提示)
}

//获取竞技场排行信息
message CS_GetBattleRankInfo{
    int32 RankStart = 1; //起始排名
    int32 RankCount = 2;//排名个数
}
//获取竞技场地图信息
message CS_GetBattleMapInfo{
    int32 ID = 1;
}

//返回竞技场排名
message SC_GetBattleRankInfo{
    repeated BattleRankOneInfo RankInfo = 1;//
    BattleRankOneInfo MyRankInfo = 2;// 自己的排名
}
//获取竞技场地图信息
message SC_GetBattleMapInfo{
    CopyMapInfo BattleMapInfo = 1;//
}

//竞技场排名单个信息
message BattleRankOneInfo{
    int32 Characterid = 1;              //Characterid   
    string Name = 2;              //  
    int32 Typeid = 3;              //  
    int32 Rank = 4;              //  
    int32 Score = 5;              //  
}
//匹配竞技场
message CS_BattlePiPei{
    int32 CopyMapID = 1;
}
//取消匹配竞技场
message CS_BattleCancel{
    int32 CopyMapID = 1;
}


//查看竞技场面板
message CS_GetBattleHeroInfo{
    int32 SceneID = 1; //场景ID
}
//竞技场面板
message SC_GetBattleHeroInfo{
    repeated BattleOverPlayerOneInfo Group1 = 1;//
    repeated BattleOverPlayerOneInfo Group2 = 2;//
    int32 WinnerGroup = 3; // 0表示 没有结束 1表示队伍1胜利 2表示队伍2胜利 3表示平局
}

//竞技场面板查看的单个玩家信息
message BattleOverPlayerOneInfo{
    int32 Characterid = 1;              //Characterid   
    string Name = 2;              //  
    int32 Typeid = 3;              //  
    int32 Score = 4;              //  
    int32 KillCount = 5;
    int32 DeathCount = 6;
    int32 Level = 7;
    repeated string  EquipItems = 8;//装备1
}